--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 								<p>https://www.linkedin.com/in/parta-sinaga-3b6b97251/</p>
 							</header>
 							<div class="content">
-							<center><img src="C:/Users/ibeng/Desktop/Portfolio/images/IMG_5053.jpg" height="30%" width="30%" /></center>
+							<center><img src="https://github.com/parta66/parta66.github.io/blob/main/images/IMG_5053.JPG" height="30%" width="30%" /></center>
 							<p>Pada tahun 2017 Saya Lulus Dari Fakultas Ilmu Komputer Program Studi Sistem Informasi Di Institut Informatika Dan Bisnis Darmajaya Bandar Lampung, Dengan Judul Skripsi 
 							<br/><p>"Perancangn Sistem Informasi Potensi Akademik Dan Pendaftaran Peserta Didik Baru Pada SMK Setia Budi Berbasis WEB Dan SMS Gateway"<br/>
 								  <p>Saya memiliki ketertarikan pada bidang website, copywriting, content marketing dan industri kreatif.</p>
