--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
 								<p>https://www.linkedin.com/in/parta-sinaga-3b6b97251/</p>
 							</header>
 							<div class="content">
-							<center><img src="https://github.com/parta66/parta66.github.io/blob/main/images/IMG_5053.JPG" height="30%" width="30%" /></center>
+							<center><img src="https://media-exp1.licdn.com/dms/image/D4E03AQGv337I5VoVNw/profile-displayphoto-shrink_800_800/0/1664473725512?e=1669852800&v=beta&t=spsIkkEN5vKefnGzl7iLQyjP2BvGBrd9-BV8YGJb2Eo" height="30%" width="30%" /></center>
 							<p>Pada tahun 2017 Saya Lulus Dari Fakultas Ilmu Komputer Program Studi Sistem Informasi Di Institut Informatika Dan Bisnis Darmajaya Bandar Lampung, Dengan Judul Skripsi 
-							<br/><p>"Perancangn Sistem Informasi Potensi Akademik Dan Pendaftaran Peserta Didik Baru Pada SMK Setia Budi Berbasis WEB Dan SMS Gateway"<br/>
-								  <p>Saya memiliki ketertarikan pada bidang website, copywriting, content marketing dan industri kreatif.</p>
+							"Perancangn Sistem Informasi Potensi Akademik Dan Pendaftaran Peserta Didik Baru Pada SMK Setia Budi Berbasis WEB Dan SMS Gateway"
+						         Saya memiliki ketertarikan pada bidang website, copywriting, content marketing dan industri kreatif.</p>
 								<ul class="actions">
 									<li><a href="#one" class="button next scrolly">Pengalaman</a></li>
 								</ul>
@@ -91,7 +91,7 @@
 										<img src="images/pic04.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3>Jagoweb.id</a></h3>
+										<h3><a href="https://www.jagoweb.id/>Jagoweb.id</a></h3>
 										<p>2022 (Web Developer - Self-Employed)</p>
 										<tr> Membangun Website (CMS Wordpress), Mengisi Konten, Memasarkan Ke Sosial Media, Dan Optimasi Seo Off Page</tr>
 									</header>
