--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 								
 							</header>	
 							<div class="content">
-							<img src="images/IMG_5053.JPG" height="100%" width="80%" />
+								<center><img src="images/IMG_5053.JPG" height="500%" width="50%"></center>
 							<p>Pada tahun 2017 Saya Lulus Dari Fakultas Ilmu Komputer Program Studi Sistem Informasi Di Institut Informatika Dan Bisnis Darmajaya Bandar Lampung, Dengan Judul Skripsi 
 							"Perancangn Sistem Informasi Potensi Akademik Dan Pendaftaran Peserta Didik Baru Pada SMK Setia Budi Berbasis WEB Dan SMS Gateway"
 						         Saya memiliki ketertarikan pada bidang website, copywriting, content marketing dan industri kreatif.</p>
