--- a/index.html
+++ b/index.html
@@ -97,6 +97,16 @@
 										<tr> Membangun Website (CMS Wordpress), Mengisi Konten, Memasarkan Ke Sosial Media, Dan Optimasi Seo Off Page</tr>
 									</header>
 								</article>
+	<article>
+									<span class="image">
+										<img src="images/pic04.jpg" alt="" />
+									</span>
+									<header class="major">
+										<h3><a href="https://pondoksalam.co.id/">Pondoksalam</a></h3>
+										<p>2022 (Web Developer - Self-Employed)</p>
+										<tr> Membangun Website (CMS Wordpress), Mengisi Konten, Memasarkan Ke Sosial Media, Dan Optimasi Seo Off Page</tr>
+									</header>
+								</article>
 							</section>
 					</div>
 				<!-- Footer -->
