--- a/index.html
+++ b/index.html
@@ -97,12 +97,22 @@
 										<tr> Membangun Website (CMS Wordpress), Mengisi Konten, Memasarkan Ke Sosial Media, Dan Optimasi Seo Off Page</tr>
 									</header>
 								</article>
-	<article>
+								<article>
 									<span class="image">
 										<img src="images/pic04.jpg" alt="" />
 									</span>
 									<header class="major">
 										<h3><a href="https://pondoksalam.co.id/">Pondoksalam</a></h3>
+										<p>2022 (Web Developer - Self-Employed)</p>
+										<tr> Membangun Website (CMS Wordpress), Mengisi Konten, Memasarkan Ke Sosial Media, Dan Optimasi Seo Off Page</tr>
+									</header>
+								</article>
+	<article>
+									<span class="image">
+										<img src="images/pic04.jpg" alt="" />
+									</span>
+									<header class="major">
+										<h3><a href="https://pemancar.id/">Pemancar</a></h3>
 										<p>2022 (Web Developer - Self-Employed)</p>
 										<tr> Membangun Website (CMS Wordpress), Mengisi Konten, Memasarkan Ke Sosial Media, Dan Optimasi Seo Off Page</tr>
 									</header>
