--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
 								<center><img src="images/IMG_5053.JPG" height="50%" width="80%"></center>
 							<p>Pada tahun 2017 Saya Lulus Dari Fakultas Ilmu Komputer Program Studi Sistem Informasi Di Institut Informatika Dan Bisnis Darmajaya Bandar Lampung, Dengan Judul Skripsi 
 							"Perancangn Sistem Informasi Potensi Akademik Dan Pendaftaran Peserta Didik Baru Pada SMK Setia Budi Berbasis WEB Dan SMS Gateway"
-						         Saya memiliki ketertarikan pada bidang website, copywriting, content marketing dan industri kreatif.</p>
+						         Saya memiliki ketertarikan pada bidang website, content writing, 
+								dan industri kreatif.</p>
 								<ul class="actions">
 									<li><a href="#one" class="button next scrolly">Pengalaman</a></li>
 								</ul>
@@ -51,7 +52,7 @@
 									</span>
 									<header class="major">
 										<h3>Gurupendidikan.co.id</a></h3>
-										<p>2014 (Copywriter)</p>
+										<p>2014 (Content Writing)</p>
 										<tr>Membuat Artikel Dengan Optimasi Seo On Page</tr>
 									</header>
 								</article>
@@ -61,7 +62,7 @@
 									</span>
 									<header class="major">
 										<h3>Pendidikan.co.id</a></h3>
-										<p>2015 (Copywriter)</p>
+										<p>2015 (Content Writing)</p>
 										<tr>
 										<td>Riset Keyword, Membuat Artikel Dengan Optimasi Seo On Page</td>
 										</tr>
