--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 									<header class="major">
 										<h3>PT Garuda Citra Teknik</a></h3>
 										<p>2017 - 2022 (Staff)</p>
-										<tr>Mengelola Data Pelanggan (Pendaftaran Pasang Listrik Baru), Memeriksa Dan Memastikan Kesesuaian Data Pelanggan dan Item (MCB, Kabel, Daya, dan Item Lainnya), Membuat Laporan Keuangan.
+										<tr>Mengelola dan Membuat Laporan Data Pelanggan di Microsoft Office (Ms Excel, Word, PPT), Memeriksa Dan Memastikan Kesesuaian Data Pelanggan dan Item (MCB, Kabel, Daya, dan Item Lainnya).
 									</header>
 								</article>
 								<article>
