--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 							<header class="major">
 								<h1>Parta Sinaga</h1>
 								<p>Hubungi Saya : <a href="mailto:partasinaga66@gmail.com">Email Saya</a> - <a href="https://api.whatsapp.com/send?phone=6289649839041">Whatsapp</a></p>
-								<p>https://www.linkedin.com/in/parta-sinaga-3b6b97251/</p>
+								<p><a href="https://www.linkedin.com/in/parta-sinaga-3b6b97251/">Linkedin</a></p>
 								
 							</header>	
 							<div class="content">
