--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<!-- Header -->
 					<header id="header" class="alt">
 						<a href="index.html" class="logo"><strong>My</strong> <span>Portfolio</span></a>
-						<a href="CV.html" class="logo"><strong>My</strong> <span>Portfolio</span></a>
+						<a href="CV.html" class="logo"><strong>My</strong> <span>Curriculum Vitae</span></a>
 					</header>
 				<!-- Banner -->
 					<section id="banner" class="major">
