--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<!-- Header -->
 					<header id="header" class="alt">
 						<a href="index.html" class="logo"><strong>My</strong> <span>Portfolio</span></a>
-						<a href="CV.html" class="logo"><strong>My</strong> <span>Curriculum Vitae</span></a>
+						<a href="cv.html" class="logo"><strong>My</strong> <span>Curriculum Vitae</span></a>
 					</header>
 				<!-- Banner -->
 					<section id="banner" class="major">
@@ -131,7 +131,7 @@
 								<li><a href="https://www.linkedin.com/in/parta-sinaga-3b6b97251/" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 							</ul>
 							<ul class="copyright">
-								<li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
+								Design: <a href="https://html5up.net">HTML5 UP</a></li>
 							</ul>
 						</div>
 					</footer>
