--- a/cv.html
+++ b/cv.html
@@ -30,7 +30,7 @@
 								<a href="https://www.linkedin.com/in/parta-sinaga-3b6b97251/">LinkedIn</a></p>
 							</header>
 							<div class="content">
-							<center><img src="C:/Users/ibeng/Desktop/Portfolio/images/IMG_5053.jpg" height="25%" width="40%" /></center>
+							<center><img src="images/IMG_5053.JPG" height="25%" width="40%"></center>>
 							<p>Lulus Tahun 2017 Di IBI DARMAJAYA BANDAR LAMPUNG Fakultas Ilmu Komputer Jurusan Sistem Informasi. 
 							Memiliki Pengalaman Kerja Sebagai Content Writing Sejak 2014, 
 							Membuat Situs Pribadi Berawal Dari Blogspot Sampai Menggunakan CMS Wordpress 
@@ -116,6 +116,7 @@
 					</section>
 				<!-- Footer -->
 				<footer id="footer">
+					<center>
 						<div class="inner">
 							<ul class="icons">
 							<h3><a href="landing.html" class="link">Cari Saya Di</a></h3>
@@ -123,10 +124,12 @@
 								<li><a href="https://github.com/parta66" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 								<li><a href="https://www.linkedin.com/in/parta-sinaga-3b6b97251/" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 							</ul>
+							
 							<ul class="copyright">
-								<li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
+								<li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
 							</ul>
 						</div>
+						</center>
 					</footer>
 
 			</div>
