--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
 						<div class="inner">
 							<header class="major">
 								<h1>Parta Sinaga</h1>
-								<p>Hubungi Saya : <a href="mailto:partasinaga66@gmail.com">Email Saya</a> - <a href="https://api.whatsapp.com/send?phone=6289649839041">Whatsapp</a></p>
-								<p><a href="https://www.linkedin.com/in/parta-sinaga-3b6b97251/">Linkedin</a></p>
+								<p>Hubungi Saya : <a href="mailto:partasinaga66@gmail.com">Email Saya</a> - 
+								<a href="https://api.whatsapp.com/send?phone=6289649839041">Whatsapp</a></p> -
+								<a href="https://www.linkedin.com/in/parta-sinaga-3b6b97251/">Linkedin</a></p>
 								
 							</header>	
 							<div class="content">
@@ -123,6 +124,7 @@
 					</div>
 				<!-- Footer -->
 				<footer id="footer">
+					<center>
 						<div class="inner">
 							<ul class="icons">
 							<h3><a href="landing.html" class="link">Cari Saya Di</a></h3>
@@ -130,10 +132,12 @@
 								<li><a href="https://github.com/parta66" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 								<li><a href="https://www.linkedin.com/in/parta-sinaga-3b6b97251/" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 							</ul>
+							
 							<ul class="copyright">
-								Design: <a href="https://html5up.net">HTML5 UP</a></li>
+								<li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
 							</ul>
 						</div>
+						</center>
 					</footer>
 
 			</div>
