--- a/cv.html
+++ b/cv.html
@@ -44,10 +44,10 @@
 						<div class="content">
 							<h3><a>Pengalaman Kerja</a></h3>
 							<ol>
-							<li>Gurupendidikan.co.id 2014 (COPYWRITER)
+							<li>Gurupendidikan.co.id 2014 (Content Writer)
 							<br/>Membuat Artikel Dengan Optimasi Seo On Page</li>
 							
-							<li>Pendidikan.co.id 2015 (COPYWRITER)
+							<li>Pendidikan.co.id 2015 (Content Writer)
 							<br/>Riset Keyword, Membuat Artikel Dengan Optimasi Seo On Page</li>
 							
 							<li>Pendidikanku.org 2016 (SELF-EMPLOYED)
