--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 							<header class="major">
 								<h1>Parta Sinaga</h1>
 								<p>Hubungi Saya : <a href="mailto:partasinaga66@gmail.com">Email Saya</a> - 
-								<a href="https://api.whatsapp.com/send?phone=6289649839041">Whatsapp</a></p> -
-								<a href="https://www.linkedin.com/in/parta-sinaga-3b6b97251/">Linkedin</a></p>
+								<a href="https://api.whatsapp.com/send?phone=6289649839041">Whatsapp</a> - 
+								<a href="https://www.linkedin.com/in/parta-sinaga-3b6b97251/">LinkedIn</a></p>
 								
 							</header>	
 							<div class="content">
