--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 										<img src="images/pic04.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="https://od2wd.id//">OD2WD</a></h3>
+										<h3><a href="https://od2wd.id/">OD2WD</a></h3>
 										<p>2022 (Web Developer - Self-Employed)</p>
 										<tr> Membangun Website (CMS Wordpress), Mengisi Konten, Memasarkan Ke Sosial Media, Dan Optimasi Seo Off Page</tr>
 									</header>
