--- a/cv.html
+++ b/cv.html
@@ -30,7 +30,7 @@
 								<a href="https://www.linkedin.com/in/parta-sinaga-3b6b97251/">LinkedIn</a></p>
 							</header>
 							<div class="content">
-							<center><img src="images/IMG_5053.JPG" height="25%" width="40%"></center>>
+							<center><img src="images/IMG_5053.JPG" height="25%" width="40%"></center>
 							<p>Lulus Tahun 2017 Di IBI DARMAJAYA BANDAR LAMPUNG Fakultas Ilmu Komputer Jurusan Sistem Informasi. 
 							Memiliki Pengalaman Kerja Sebagai Content Writing Sejak 2014, 
 							Membuat Situs Pribadi Berawal Dari Blogspot Sampai Menggunakan CMS Wordpress 
