--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
 								<li><a href="https://web.facebook.com/paerta.sinagarezpector" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
 								<li><a href="https://github.com/parta66" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 								<li><a href="https://www.linkedin.com/in/parta-sinaga-3b6b97251/" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+								<li><a href="https://groups.google.com/g/media4sharing" class="icon brands alt fa-google-plus"><span class="label">Google Group Media4Sharing</span></a></li>
 							</ul>
 							
 							<ul class="copyright">
