--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<meta name="google-site-verification" content="zCexsW3-wqyZenJOHV8kHSWf9fdRyflS4wES4hMhKSQ" />
 	</head>
 	<body class="is-preload">
 		<!-- Wrapper -->
