--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
 								<h1>Parta Sinaga</h1>
 								<p>Hubungi Saya : <a href="mailto:partasinaga66@gmail.com">Email Saya</a> - 
 								<a href="https://api.whatsapp.com/send?phone=6289649839041">Whatsapp</a> - 
-								<a href="https://www.linkedin.com/in/parta-sinaga-3b6b97251/">LinkedIn</a></p>
+								<a href="https://www.linkedin.com/in/parta-sinaga-3b6b97251/">LinkedIn</a> -
+								<a href="https://media-4-sharing.web.app/">Media4Sharing</a></p>
 								
 							</header>	
 							<div class="content">
