--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 										<img src="images/pic04.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="https://manlight.id/">Manlight</a></h3>
+										<h3><a href="https://digiteksa.com/">Digiteksa</a></h3>
 										<p>2023 (Web Developer - Self-Employed)</p>
 										<tr> Membangun Website (CMS Wordpress), Mengisi Konten, Memasarkan Ke Sosial Media, Dan Optimasi Seo Off Page</tr>
 									</header>
