--- a/index.html
+++ b/index.html
@@ -122,6 +122,16 @@
 										<tr> Membangun Website (CMS Wordpress), Mengisi Konten, Memasarkan Ke Sosial Media, Dan Optimasi Seo Off Page</tr>
 									</header>
 								</article>
+								<article>
+									<span class="image">
+										<img src="images/pic04.jpg" alt="" />
+									</span>
+									<header class="major">
+										<h3><a href="https://behance.net/blankon/">UI/UX Design</a></h3>
+										<p>Project UI/UX Design Cek Di Behance</p>
+										<tr>Membuat desain sistem menggunakan figma / lunacy mulai dari riset pengguna, pembuatan wireframe dan prototype, serta design system/tr>
+									</header>
+								</article>
 					</div>
 				<!-- Footer -->
 				<footer id="footer">
