--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 									<header class="major">
 										<h3><a href="https://behance.net/blankon/">UI/UX Design</a></h3>
 										<p>Project UI/UX Design Cek Di Behance</p>
-										<tr>Membuat desain sistem menggunakan figma / lunacy mulai dari riset pengguna, pembuatan wireframe dan prototype, serta design system/tr>
+										<tr>Membuat desain sistem menggunakan figma / lunacy mulai dari riset pengguna, pembuatan wireframe dan prototype, serta design system</tr>
 									</header>
 								</article>
 					</div>
